<resources>
    <string name="app_name">SeptemberWorkout</string>
    <string name="about_title">Main page</string>
    <string name="date_text">Date: </string>
    <string name="reps_count_text">Quantity of repeats: </string>
    <string name="weight_text">Weight:</string>
    <string name="kg">Kg.</string>
    <string name="save">Save</string>
    <string name="excercise_name">Pulling Ups</string>
    <string name="pull_up_button">Pull up</string>
    <string name="push_up_button">Push up</string>
    <string name="squatting">Squatting</string>
    <string name="records_text">Records</string>
    <string name="call_button">Send information</string>
    <string name="send_info_tittle">Send information</string>
    <string name="message_has_been_sent_successfully">Message has been sent successfully</string>
    <string name="Exit">Exit</string>
    <string name="share_it">Share it</string>
    <string name="settings">NextActivity</string>
    <string name="startStopwatchButton">Start</string>
    <string name="stop_StopwatchButton">Stop</string>
    <string name="restart_StopwatchButton">Reset</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, veniam.</string>
    <string name="text_second">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequatur cum dolore ea eius enim fuga necessitatibus possimus quidem, ratione, reiciendis, rerum sed vel. Accusamus aut fuga in provident qui.</string>
    <string name="workout_detail_repeats_example">0</string>
    <string name="workout_detail_record_weight">0</string>
    <string name="mainfest_list_item">List Item</string>
    <string name="stop_watch_activity_time">0:00:00</string>
    <string name="stop_watch_manifest">Stop watch</string>

</resources>